@@ -1,3 +1,10 @@
+2013-04-05  Corinna Vinschen  <vinschen@redhat.com>
+
+	* intrin.h: Allow inclusion under Cygwin.  Move all declarations
+	colliding with POSIX into a single block, guarded by #ifndef __CYGWIN__.
+	Add comment to explain why.  Change `long' to `__LONG32' throughout to
+	handle LP64 systems.
+
 2013-01-12  Jonathan Yong  <jon_y@users.sourceforge.net>
 
 	* _mingw_mac.h: New __MINGW_MS_PRINTF helper macro.
